Import of DSYRTM/File-BetweenTree-1.02 from CPAN.
gitpan-cpan-distribution: File-BetweenTree
gitpan-cpan-version:      1.02
gitpan-cpan-path:         DSYRTM/File-BetweenTree-1.02.tar.gz
gitpan-cpan-author:       DSYRTM
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,9 +1,9 @@
 --- #YAML:1.0
 name:               File-BetweenTree
-version:            1.01
+version:            1.02
 abstract:           binary search of variable length.
 author:
-    - Mitsuru Yasuda & <dsyrtm@gmail.com>
+    - Mitsuru Yasuda & <dsyrtm@cpan.org>
 license:            unknown
 distribution_type:  module
 configure_requires:
